--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,6 +18,7 @@ bind-key v split-window -v
 # Configuration from github
 set -g window-status-current-style "underscore"
 # setw -g window-status-current-bg magenta
+setw -g window-status-separator " | "
 
 # change working dir to current dir. 
 bind-key m command-prompt "attach -c %1 $PWD"; #display-message "changed"
