--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,3 +43,7 @@ bind r source-file ~/.tmux.conf
 # set-window-option -g mode-keys vi
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
+# NVIM HEALTHCHECK SUGGESTION
+set-option -sg escape-time 10
+set-option -g focus-events on
