--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,24 +11,29 @@ set-option -ga terminal-overrides ",*-256color*:Tc"
 # limit scrollback
 set -g history-limit 10000
 
-# change vertical and horizontal keybindings
-bind-key h split-window -h
-bind-key v split-window -v
+# Create new panes in same working directory
+bind-key '"' split-window -hc "#{pane_current_path}" 
+bind-key v split-window -vc "#{pane_current_path}"
+bind-key c new-window -c "#{pane_current_path}"
 
 # Configuration from github
 set -g window-status-current-style "underscore"
 # setw -g window-status-current-bg magenta
 setw -g window-status-separator " | "
-
-# change working dir to current dir. 
-bind-key m command-prompt "attach -c %1 $PWD"; #display-message "changed"
+set -g  status-left-length 40
 
 # only this line might not be enough
 # set -g default-terminal "xterm-256color"
 
-# roz3x
+# roz3x{{{
 set -g mouse on
 set -g base-index 1
+
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+# }}}
 
 # Makes tmux buffer selection work like vim
 # unbind [
