--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,6 +1,8 @@
 # include dracula.conf
 
-font_family Fira Code Regular Nerd Font Complete Mono
+font_family Fira Code Retina Nerd Font Complete Mono
+# font_family FiraCode Nerd Font Mono
+# font_family JetBrains Mono
 # bold_font JetBrains Mono Bold
 # italic_font JetBrains Mono Italic
 # bold_italic_font JetBrains Mono Bold Italic
@@ -24,6 +26,7 @@ remember_window_size  yes
 initial_window_width  800
 initial_window_height 400
 placement_strategy top-left
+wayland_titlebar_color system
 
 
 # BEGIN_KITTY_THEME
