back to everforest

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -26,10 +26,10 @@ remember_window_size  yes
 initial_window_width  800
 initial_window_height 400
 placement_strategy top-left
-wayland_titlebar_color system
+# wayland_titlebar_color system
 
 
 # BEGIN_KITTY_THEME
-# Doom One Light
+# Batman
 include current-theme.conf
 # END_KITTY_THEME
